force-app/main/default/objects/vlocity_ins__StoryObjectConfiguration__c/fields/vlocity_ins__EnableNewAction__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__EnableNewAction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable New Action</label>
    <type>Checkbox</type>
</CustomField>