force-app/main/default/objects/vlocity_ins__StoryObjectConfiguration__c/fields/vlocity_ins__HasOwner__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__HasOwner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Owner</label>
    <type>Checkbox</type>
</CustomField>