force-app/main/default/objects/vlocity_ins__StoryObjectConfiguration__c/fields/vlocity_ins__SortFieldIsDate__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__SortFieldIsDate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sort Field Is Date</label>
    <type>Checkbox</type>
</CustomField>